--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
@@ -49,14 +49,6 @@ code {
   margin-right: 5px;
 }
 
-html {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-}
-
 .bg {
   animation: slide 3s ease-in-out infinite alternate;
   background-image: linear-gradient(-20deg, red 50%, #000 50%);
@@ -79,18 +71,14 @@ body {
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 0.25em;
-  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25);
-  box-sizing: border-box;
-  width: 1000px;
-  height: 80vh;
-  left: 50%;
-  padding: 3vmin;
-  position: fixed;
-  text-align: center;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  padding: 5vmin;
+  max-width: 1000px;
 }
 
 @media screen and (max-width: 768px) {
@@ -99,12 +87,20 @@ body {
     height: 90%;
     font-size: 10px;
   }
+  p {
+    font-size: 24px;
+    color: navy;
+  }
 }
 
 @media (min-width: 748px) and (max-width: 1536px) {
   .content {
     width: 90%;
     height: 80%;
+  }
+  p {
+    font-size: 20px;
+    color: navy;
   }
 }
 
@@ -121,7 +117,25 @@ h1 {
   }
 }
 
-
 .modal-backdrop {
   z-index: -1;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  text-align: center;
+}
+
+p {
+  font-size: 18px;
+  color: navy;
+}
+
+textarea {
+  height: 100px;
 }
