--- a/client/src/index.css
+++ b/client/src/index.css
@@ -49,6 +49,10 @@ code {
   margin-right: 5px;
 }
 
+body {
+  margin: 0;
+}
+
 .bg {
   animation: slide 3s ease-in-out infinite alternate;
   background-image: linear-gradient(-20deg, red 50%, #000 50%);
@@ -71,25 +75,19 @@ code {
 }
 
 .content {
-  display: flex;
-  flex-direction: column;
-  width: 80%;
-  height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 0.25em;
-  padding: 5vmin;
-  max-width: 1000px;
+  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.25);
+  width: 100%;
+  height: 100%;
+  padding: 3vmin;
+  text-align: center;
+  min-height: 90vh;
 }
 
 @media screen and (max-width: 768px) {
   .content {
-    width: 80%;
-    height: 90%;
-    font-size: 10px;
-  }
-  p {
-    font-size: 24px;
-    color: navy;
+    width: 90%;
   }
 }
 
@@ -97,10 +95,6 @@ code {
   .content {
     width: 90%;
     height: 80%;
-  }
-  p {
-    font-size: 20px;
-    color: navy;
   }
 }
 
@@ -121,18 +115,8 @@ h1 {
   z-index: -1;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
 p {
-  text-align: center;
-}
-
-p {
-  font-size: 18px;
+  font-size: 20px;
   color: navy;
 }
 
